# prism-d1-velocity

./: .gitignore  CLAUDE.md  README.md
assessment/: ASSESSMENT-GUIDE.md  README.md
assessment/interview/: README.md  interview-guide.md  pre-interview-checklist.md  scoring-sheet.md
assessment/onboarding/: README.md  email-templates.md  onboarding-router.ts  tracks.md
assessment/reports/: README.md  generate-pdfs.py  report-generator.ts  scan-result.json
assessment/scanner/: package-lock.json  package.json
assessment/scoring/: README.md  level-definitions.ts  package.json  (+4 more)
bootstrapper/: README.md
docs/: ROADMAP.md  agents.html  competitive-landscape.html  competitive-landscape.md  dashboard-executive.html  dashboard-team.html  dashboard.css  dashboard.html  data-architecture.html  data-architecture.md  index.html  journey.css  journey.html  roadmap.html  style.css
infra/: cdk.json  package-lock.json  package.json
sample-app/: CLAUDE.md  README.md  jest.config.ts  package-lock.json  package.json
sample-app/agent/: README.md  pyproject.toml
sample-app/agent/scripts/: deploy-agentcore.py  run-agent.py  run-demo.py
sample-app/agent/specs/: mcp-task-server.md  multi-agent-orchestration.md  task-assistant-agent.md
sample-app/agent/src/multi_agent/: cli.py  orchestrator.py  planner.py  reviewer.py
sample-app/agent/src/task_assistant/: agent.py  cli.py  config.py  metrics.py  mock_model.py  tools.py
sample-app/agent/tests/: conftest.py  test_agent.py  test_multi_agent.py  test_tools.py
scripts/: generate-demo-data.sh  setup.sh
workshop/: README.md
(+182 files in other folders)
